--- a/css/contact.css
+++ b/css/contact.css
@@ -84,8 +84,12 @@
     border-style: solid;
     border-radius: 4px;
     padding: 6px 12px;
-    width: calc(100% - 30px);
     color: #828282;
+}
+
+#contact-form input:not(.button),
+#contact-form textarea {
+    width: calc(100% - 30px);
 }
 
 #contact-form input.is-valid,
@@ -112,16 +116,16 @@
 
 /* Photo Highlights section */
 
-#photo-highlights-v2 .image:nth-child(1) {
+#photo-highlights .image:nth-child(1) {
     background-image: url("../images/photo-highlight-7.jpg");
     background-position: right center;
 }
 
-#photo-highlights-v2 .image:nth-child(2) {
+#photo-highlights .image:nth-child(2) {
     background-image: url("../images/photo-highlight-8.jpg");
 }
 
-#photo-highlights-v2 .image:nth-child(3) {
+#photo-highlights .image:nth-child(3) {
     background-image: url("../images/photo-highlight-9.jpg");
     background-position: right center;
 }
