--- a/css/index.css
+++ b/css/index.css
@@ -352,14 +352,14 @@
 
 /* Photo Highlights section */
 
-#photo-highlights-v2 .image:nth-child(1) {
+#photo-highlights .image:nth-child(1) {
     background-image: url("../images/photo-highlight-1.jpg");
 }
 
-#photo-highlights-v2 .image:nth-child(2) {
+#photo-highlights .image:nth-child(2) {
     background-image: url("../images/photo-highlight-2.jpg");
 }
 
-#photo-highlights-v2 .image:nth-child(3) {
+#photo-highlights .image:nth-child(3) {
     background-image: url("../images/photo-highlight-3.jpg");
 }
