--- a/css/press.css
+++ b/css/press.css
@@ -66,15 +66,15 @@
     }
 }
 
-#photo-highlights-v2 .image:nth-child(1) {
+#photo-highlights .image:nth-child(1) {
     background-image: url("../images/photo-highlight-9.jpg");
     background-position: right center;
 }
 
-#photo-highlights-v2 .image:nth-child(2) {
+#photo-highlights .image:nth-child(2) {
     background-image: url("../images/photo-highlight-1.jpg");
 }
 
-#photo-highlights-v2 .image:nth-child(3) {
+#photo-highlights .image:nth-child(3) {
     background-image: url("../images/photo-highlight-2.jpg");
 }
