--- a/css/common.css
+++ b/css/common.css
@@ -58,6 +58,12 @@ a, .button {
     cursor: pointer;
 }
 
+@media (max-width: 360px) {
+    .button {
+        font-size: 18px;
+    }
+}
+
 .button:hover {
     border-color: #828282;
     color: #fafafa;
@@ -82,6 +88,16 @@ a, .button {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='rgb(130, 130, 130)' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
     border-width: 2px;
     border-style: solid;
+}
+
+form input:not(.button),
+form select,
+form textarea {
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 4px;
+    padding: 6px 12px;
+    color: #828282;
 }
 
 form input.is-invalid,
@@ -109,6 +125,13 @@ form textarea.is-invalid {
 form textarea.is-valid,
 form textarea.is-invalid {
     background-position: top 8px right 8px;
+}
+
+form input:not(.button):focus,
+form select:focus,
+form textarea:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgb(130 130 130 / 25%);
 }
 
 form input.is-valid:focus,
@@ -177,7 +200,7 @@ form select {
 }
 
 .button,
-.is-default, {
+.is-default {
     border-color: #828282;
 }
 
